src/styles/_Header.scss
header {
    margin: 0 auto;
    padding-top: 30px;
    width: 100vw;
    // background-color: lightblue;
 
    nav{
        display: flex;
        justify-content: space-around;
        align-items: center;

        .ruff-logo {
            width: 300px;
            color: blue;
        }

        .nav-lists {
            display: flex;
            justify-content: space-around;
            align-items: center;
            
            ul{
                display: flex;
                justify-content: center;
                list-style-type: none;  
            }
    
            li {
                margin: 0px 20px;
                color: $font-color;
                font-family: $font-family;
                font-size: 1.3em;
                cursor: pointer;
            }

            li:hover {
                text-decoration: underline; 
                // text-underline-position: under;
                text-decoration-color: rgb(250, 192, 0); 
                
            }

        }
    }

    // SLIDE FOR DROP DOWN MENU
    .slide-menu {
        background-color: rgb(240, 240, 240);
        width: 100%;
        height: 100vh;
        display: flex;
        justify-content: flex-start;
        align-items: center;
        position: absolute;
        top: -100vh;
        transition: .60s ease-in-out;
        opacity: 0;
        transition-property: opacity;
        z-index: -1;
    }

    .slide-menu-position {
        top: 92px;
        right: 0px;
        opacity: 1;
        z-index: 5;
    }

    // SHOP DROP DOWN

    .shop-container {
        margin-top: 100px; 
        width: 100vw;
        height: 100vh;
        display: flex;
        justify-content: space-around;
        align-items: flex-start;
        // background: yellow;
    }

    .container-left {
        width: 30vw;
        // background-color: lightcoral;
    }

    .harness-image {
        padding-left: 75px;
        width: 27vw;
    }

    .container-right {
        // background-color: lightgreen;
        display: flex;
        align-items: flex-start;

        .gear-list {
            width: 35vw;
            height: 400px;
            // background-color: yellow;

            .gear-container {
                display: flex;
                justify-content: space-around;
            
                .gear-split-left {
                    width: 175px;
                    // background: grey;
                }

                .gear-split-right {
                    width: 175px;
                    // background: pink;
                }  
            }

            ul {
                list-style-type: none;
                
                li {
                    margin-bottom: 20px;
                    color: $font-color;
                    font-family: $font-family;
                    font-size: 1.3em;
                    cursor: pointer;
                }
                li:hover {
                    text-decoration: underline; 
                    text-decoration-color: rgb(250, 192, 0);
                }
            }
        }
        .collections-container {
            width: 25vw;
            height: 400px;
            // background-color: blue;
               
            ul {
                list-style-type: none; 
                
                li {
                    margin: 20px;
                    color: $font-color;
                    font-family: $font-family;
                    font-size: 1.3em;
                    cursor: pointer;
                }

                li:hover {
                    text-decoration: underline; 
                    text-decoration-color: rgb(250, 192, 0);
                }
            }
        }
    }   

    // TAILS DROPDOWN
    
    .tails-container {
        position: relative;
        margin-top: 150px;
        padding: 0px 150px;
        width: 100vw;
        height: 100vh;
        display: flex;
        justify-content: space-around;
        align-items: flex-start;
        // background-color: red;

        .my-dog-container {
            position: relative;
            overflow: hidden;

            .my-dog-text-container {
                display: block;
                // background-color: red;
            }
            .my-dog-text {
                margin: 140px 0px 0px 75px;
                position: fixed;
                color: white;
                font-family: $font-family;
                font-size: 1.3em;
                letter-spacing: 2px;   
                text-transform: uppercase;
            }
            .my-dog-text:hover {
                opacity: .8;
            }

            .my-dog {
               width: 300px; 

            }

            // .my-dog:hover {
            //     transform: scale(1.05);
            //     transition: 0.6 ease-in-out;
            // }
        }

        .our-stories-container {
            position: relative;
            overflow: hidden;

            .ourStoriesBtn-container {
                display: flex;
                justify-content: center;
                align-items: center;
                // background-color: red;
            }

            .ourStoriesBtn {
                margin-top: 150px;
                padding: 15px;
                position: fixed;
                border: solid 1px white;
                background-color: transparent;
                color: white;
                font-family: $font-family;
                font-size: 1.3em;
                letter-spacing: 1px;  
                border: 0.2rem solid #fff;
                text-transform: uppercase;
            }

            .ourStoriesBtn:hover {
                opacity: .8;
            }

            .our-stories {
               width: 300px; 
            }

            // .our-stories:hover {
            //     // transform: scale(1.05);
            // }
        }

        .our-amb-container {
            position: relative;
            overflow: hidden;

            .ourAmbBtn-container {
                display: flex;
                justify-content: center;
                align-items: center;
                // background-color: red;
            }

            .ourAmbBtn {
                margin-top: 150px;
                padding: 15px;
                position: fixed;
                border: none;
                background-color: transparent;
                color: white;
                font-family: $font-family;
                font-size: 1.3em;
                letter-spacing: 1px;
                border: 0.2rem solid #fff; 
                line-height: 1.2;  
                text-transform: uppercase;
            }

            .ourAmbBtn:hover {
                opacity: .8;
            }

            .our-amb {
                width: 300px;
            }
            // .our-amb:hover {
            //     transform: scale(1.05);
            // }
        }
    }
    .about-container {
        position: relative;
        margin-top: 150px;
        padding: 0px 150px;
        width: 50vw;
        height: 100vh;
        display: flex;
        justify-content: space-around;
        align-items: flex-start;
        // background-color: red;
    }

    .about-container-left {
        width: 30vw;
        // background-color: lightcoral;
    }

    .our-path {
        width: 27vw;
    }

    .about-container-right {
        // background-color: lightgreen;
        display: flex;
        align-items: flex-start;

        ul {
            list-style-type: none;
            
            li {
                margin-bottom: 20px;
                color: $font-color;
                font-family: $font-family;
                font-size: 1.3em;
                cursor: pointer;
            }
            li:hover {
                text-decoration: underline; 
                text-decoration-color: rgb(250, 192, 0);
            }
        }
    }
}

